syntax = "proto3";
package contracts.common;
option csharp_namespace = "gRPC.Contracts";

message ItemRequest {
	int32 id = 1;
}

message CreateResponse {
	int32 id = 1;
	string path = 2;
}

message grpc_PagingParameters {
	int32 page_number = 1;
	int32 page_size = 2;
}

message GenericResponse {
	bool success = 1;
}